Add: incomes and expenses from current month to AccountDto